v0.8.0

- Fix: peerDependencies added
- Feat: IPFS gateways usage (get list of available, get the fastes gateway, user gateways support)