@@ -3,7 +3,20 @@ import store from './store'
 // import router from './router'
 import components from'./components.js'
 import keyring from '@polkadot/ui-keyring'
-// import { Keyring } from '@polkadot/api'
+
+function polkadotKeyringLoadAll (config) {
+  if (typeof keyring.isReady === 'function') {
+    // keyring ≥ 3.6
+    if (!keyring.isReady()) keyring.loadAll(config);
+  } else {
+    try {
+        // keyring 2.x
+        keyring.loadAll(config);
+    } catch (e) {
+        if (!/Unable to initialise options/.test(e.message)) throw e;
+    }
+  }
+}
 
 const robonomicsUI = {
     install (Vue, options) {
@@ -32,7 +45,8 @@ const robonomicsUI = {
             }
         }
 
-        keyring.loadAll({ ss58Format: 32, type: 'ed25519' });
+        polkadotKeyringLoadAll({ ss58Format: 32, type: 'ed25519' });
+
     }
 }
 export { robonomicsUI }
