@@ -1,7 +1,7 @@
 {
   "name": "robonomics-ui-vue",
   "type": "module",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "main": "index.js",
   "module": "index.es.js",
   "private": false,
@@ -14,7 +14,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
-    "ipfs-smart-gateway": "^1.0.9",
+    "ipfs-smart-gateway": "^1.0.11",
     "mipd": "^0.0.7"
   },
   "peerDependencies": {
